--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
-    "swiper": "^9.1.1"
+    "sass": "^1.67.0",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "vite": "^4.2.0"
   }
 }
